Fixed wrap problem on safari

--- a/src/sass/objects/_music.scss
+++ b/src/sass/objects/_music.scss
@@ -1,9 +1,6 @@
 .music {
     max-width: 900px;
     margin: 0 auto;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-between;
     .music__album {
         margin-bottom: 3em;
         width: 100%;
@@ -15,10 +12,10 @@
 
 .album {
     padding: 2.5em 3em;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    //justify-content: space-between;
 }
 
 .album__info {
@@ -40,12 +37,16 @@
 
 .album__list {
     font-size: 0.833em;
-    line-height: 2.5;
+    //line-height: 2.5;
     width: 50%;
-    display: flex;
+
     flex-direction: column;
+
+    display: flex;
     flex-wrap: wrap;
+
     list-style: decimal-leading-zero none inside;
+
     &.album__list--1 {
         max-height: 350px;
     }
@@ -61,6 +62,6 @@
 }
 
 .album__song {
-    min-width: 215px;
-    //margin-right: 2em;
+    margin-right: 3em;
+    margin-bottom: 1em;
 }
